latest work on master

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <td style="padding:0px">
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr style="padding:0px">
-            <td style="padding:2.5%;width:63%;vertical-align:middle">
+            <td style="padding:2.5%;vertical-align:middle">
               <div class="top">
               <p style="text-align:center">
                 <br>
@@ -124,7 +124,7 @@
                 tpgan_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
               <a href="https://arxiv.org/abs/2103.09996">
                 <papertitle>Rapid treatment planning for low-dose-rate prostate brachytherapy with
                   TP-GAN</papertitle><font color="red"><strong> (Oral Presentation)</strong></font>
@@ -175,7 +175,7 @@
                 cgan_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
               <a href="https://link.springer.com/article/10.1007/s11548-021-02405-1">
                 <papertitle>Centre-specific autonomous treatment plans for prostate brachytherapy using cGANs</papertitle>
               </a>
@@ -225,7 +225,7 @@
                 coseg_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
               <a href="https://arxiv.org/abs/2103.09276">
                 <papertitle>Co-Generation and Segmentation for Generalized Surgical Instrument Segmentation on
                   Unlabelled Data</papertitle><font
@@ -272,7 +272,7 @@
                 ln_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
 
                 <papertitle>Malignancy estimation of pulmonary nodules using multi-view multi-time point convolutional neural networkss</papertitle>
 
@@ -326,7 +326,7 @@
                 ant_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
               <a href="https://digital-library.theiet.org/content/journals/10.1049/mnl.2017.0272">
                 <papertitle>Design, Measurement and Performance Enhancement of a Miniaturized Implantable Antenna for Biomedical Applications</papertitle>
               </a>
@@ -374,7 +374,7 @@
                 cnnreg_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
                 <papertitle>CNN regressor for automating treatment planning of cervical brachytherapy</papertitle>
               <br>
               <strong>Tajwar Abrar Aleef</strong>,
@@ -419,7 +419,7 @@
                 fast_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
               <a href="https://www.mdpi.com/2409-9279/1/1/7">
                 <papertitle>Fast pet scan tumor segmentation using superpixels, principal component analysis and k-means clustering</papertitle>
               </a>
@@ -458,7 +458,7 @@
                 scan_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
               <a href="https://arxiv.org/abs/1709.02247">
                 <papertitle>Complete End-To-End Low Cost Solution To a 3D Scanning System with Integrated Turntable</papertitle>
               </a>
@@ -494,7 +494,7 @@
                 heart_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
               <a href="">
                 <papertitle>Heart flow analysis in ECG-gated cardiac Ultrasound</papertitle>
               </a>
@@ -552,7 +552,7 @@
                 arm_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
 
                 <papertitle>5-Axis Robotic Arm</papertitle>
               <br>
@@ -584,7 +584,7 @@
                 firebot_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
 
                 <papertitle>Firefighting Bot</papertitle>
               <br>
@@ -616,7 +616,7 @@
                 surv_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
 
                 <papertitle>Surveillance Robot</papertitle>
               <br>
@@ -649,7 +649,7 @@
                 sonar_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
 
                 <papertitle>Sonar Glasses for the visually impaired</papertitle>
               <br>
@@ -683,7 +683,7 @@
                 manbot_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
 
                 <papertitle>Smart Line Follower</papertitle>
               <br>
@@ -716,7 +716,7 @@
                 spruce_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
 
                 <papertitle>SpruceBot</papertitle>
               <br>
@@ -753,7 +753,7 @@
                 rrl2_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
 
                 <papertitle>RRL2</papertitle>
               <br>
@@ -788,7 +788,7 @@
                 rrl1_stop()
               </script>
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
 
                 <papertitle>RRL1</papertitle>
               <br>
@@ -819,7 +819,7 @@
           <tr>
             <td style="padding:20px;width:25%;vertical-align:middle"><img
                     src="images/ECE_closed_full_colour-high-res_0.jpg"></td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
               <a href="https://ece.ubc.ca/"><papertitle>Department of Electrical and Computer Engineering, University
               of British Columbia </papertitle></a>
               <br><br>
@@ -843,7 +843,7 @@
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/SBME_UBC_Horizontal_Primary_Colour_RGB.png">
             </td>
-            <td style="padding:20px;width:75%;vertical-align:middle">
+            <td style="padding:20px;vertical-align:middle">
               <a href="https://www.bme.ubc.ca/"><papertitle>School of Biomedical Engineering, University
               of British Columbia</papertitle> </a>
               <br><br>
