fix responsiveness mobile devices

--- a/index.html
+++ b/index.html
@@ -872,11 +872,9 @@
                 <tr>
                   <td style="padding:20px;width:90%;vertical-align:middle">
 
-                  <div class="footer2">
-                    <p style="text-align:center;font-size:small;">
-		              <a href="https://clustrmaps.com/site/1bjf7" title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=5D_qUy__xzHcjumy0kCyHWlbB6laBEt94KoCb2MaAtI&cl=ffffff"></a>
+                  <p style="text-align:center;font-size:small;">
+		              <a href="https://clustrmaps.com/site/1bjf7" title="Visit tracker"><img class="footer-img" src="//www.clustrmaps.com/map_v2.png?d=5D_qUy__xzHcjumy0kCyHWlbB6laBEt94KoCb2MaAtI&cl=ffffff"></a>
                     </p>
-                  </div>
                   </td>
                 </tr>
                 </tbody></table>
