--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
                 </div>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
+            <div class="profile">
               <a href="images/tajwar.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/tajwar_circle.jpg" class="hoverZoomLink"></a>
+            </div>
             </td>
           </tr>
 
