--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               <a href="https://arxiv.org/abs/2103.09276">
                 <papertitle>Co-Generation and Segmentation for Generalized Surgical Instrument Segmentation on
                   Unlabelled Data</papertitle><font
-                      color="red"><strong> (Accepted for Oral Presentation in MICCAI 2021)</strong></font>
+                      color="red"><strong> (Oral Presentation)</strong></font>
               </a>
               <br>
               <a href="https://scholar.google.com/citations?user=eoCliRUAAAAJ&hl=en">Megha Kalia**</a>,
@@ -946,7 +946,7 @@
             <td style="padding:20px;vertical-align:middle">
               <p style="text-align:center;font-size:small;">
                 Based on <a href="https://jonbarron.info/">Jon Barron's</a> site.
-                <br> Last updated September 2021.
+                <br> Last updated October 2021.
               </p>
             </td>
           </div>
