Changed text size

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <br>
                 <name>Tajwar Abrar Aleef</name>
               </p>
-                <p style="text-align: justify">
+                <p style="text-align: justify"><div class="top_text">
                   Hi! I am a PhD Candidate from the Robotics and Control Laboratory at the <a
                         href="https://www.ubc.ca/" target="_blank" style="font-size: 17px">University of British
                   Columbia </a> supervised by Dr. Tim Salcudean and Dr. Sara Mahdavi. My PhD project is a
@@ -51,7 +51,7 @@
                         href="https://youtu.be/6G1_6NY0hQw"  target="_blank" style="font-size: 17px">vlog</a>
                   from Thailand).
 
-                </p>
+              </div></p>
 
               <p style="text-align:center">
                 <a href="mailto:tajwaraleef@ece.ubc.ca">Email</a> &nbsp|&nbsp
