--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <br><br>
                     Outside research, I play
                     <a href="https://youtube.com/playlist?list=PL3m1Q5Dtntt8RTEJKjLOGsvp45aOg2WVw" target="_blank"
-                       style="font-size:17px">guitar</a> and enjoy all sorts of sports (nowadays lifting, climbing, and ice-skating.
+                       style="font-size:17px">guitar</a> and enjoy all sorts of sports (nowadays lifting, climbing, and ice-skating).
                     I also enjoy traveling a lot; so far have covered 23 countries and countless cities (here's a <a
                           href="https://youtu.be/6G1_6NY0hQw"  target="_blank" style="font-size: 17px">vlog</a>
                     from Thailand).
