--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <a href="https://scholar.google.com/citations?user=kpp_A9wAAAAJ&hl=en&oi=ao/"  target="_blank">Septimiu E. Salcudean</a>
               <br>
 
-              <em>Under Review, 2021</em> &nbsp
+              <a href="https://sites.google.com/view/ipcai2022/home/" target="_blank"><em>IPCAI</em></a>, 2022 <font color="red"><strong> (Oral Presentation to be held in Tokyo)</strong></font> &nbsp
               <br>
               </div></div>
               <p></p>
