--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
       <papertitle>3D Shear Wave Absolute Vibro-Elastography for guided prostate biopsy: phantom and in vivo liver validation </papertitle>
     <br>
       <strong>Tajwar Abrar Aleef</strong>,
-    <a>Qi Zeng</a>,
-    <a>Hamid Moradi</a>,
-    <a>Shahed Mohammed</a>,
-    <a>Tom Curran</a>,
-    <a>Mohammad Honarvar</a>,
+    Qi Zeng,
+    Hamid Moradi,
+    Shahed Mohammed,
+    Tom Curran,
+    Mohammad Honarvar,
     <a href="https://surgery.med.ubc.ca/people/jmorris/"  target="_blank">W. James Morris</a>,
     <a href="https://scholar.google.com/citations?user=cA0ELoQAAAAJ&hl=en/"  target="_blank">S. Sara Mahdavi</a>,
     <a href="https://scholar.google.com/citations?user=kpp_A9wAAAAJ&hl=en&oi=ao/"  target="_blank">Septimiu E. Salcudean</a>
