--- a/index.html
+++ b/index.html
@@ -39,16 +39,15 @@
                   <br><br>
                   I am an Erasmus Scholar and my MSc was a specialized
                   degree focused on Medical Imaging fully funded by the European Union and was jointly hosted
-                  by three European countries (France, Italy, and Spain). Additionally, I hold a BSc degree in
-                  Electrical & Electronic Engineering. Overall, I have a strong background in AI & Medical Imaging and
-                  have many years of experience working with multiple research groups & hospitals across Europe and Canada.
+                  by three European countries (France, Italy, and Spain). Furthermore, I am also an electrical and electronics engineer. I have a strong background in AI & Medical Imaging from
+                  over 7 years of experience working with multiple universities, research groups & hospitals across Europe and Canada. In a nutshell, I am a swift learner with diverse knowledge and experience in both software and hardware engineering and I am ready to embrace and solve the next big problem!
 
 
                     <br><br>
                     Outside research, I play
                     <a href="https://youtube.com/playlist?list=PL3m1Q5Dtntt8RTEJKjLOGsvp45aOg2WVw" target="_blank"
                        style="font-size:17px">guitar</a> and enjoy all sorts of sports (nowadays lifting, climbing, and ice-skating).
-                    I also enjoy traveling a lot; so far have covered 23 countries and countless cities (here's a <a
+                    I also enjoy traveling a lot; so far have covered 24 countries and countless cities (here's a <a
                           href="https://youtu.be/6G1_6NY0hQw"  target="_blank" style="font-size: 17px">vlog</a>
                     from Thailand).
 
@@ -93,7 +92,7 @@
 
               <p style="text-align: left">
                 <div class="text_just">
-                Most of my research work is centered around cancer/object of interest detection/localization/segmentation, solving
+                Most of my research work is centered around cancer/object of interest detection/localization/segmentation, image alignment (2D/3D//deformable), solving
                 constrained optimization problems for radiotherapy, adversarial learning, ultrasound
                 elastography, and designing biomedical implantable antennas.
                 </div>
@@ -147,11 +146,11 @@
     <a href="https://scholar.google.com/citations?user=kpp_A9wAAAAJ&hl=en&oi=ao/"  target="_blank">Septimiu E. Salcudean</a>
     <br>
 
-    <em>Submitted to <a href=https://2022.ieee-ius.org/" target="_blank">IEEE IUS</a></em>, 2022 &nbsp
+    <em><a href=https://2022.ieee-ius.org/" target="_blank">IEEE IUS</a></em>, 2022 <font color="red"><strong> (Oral Presentation; Travel Award)</strong></font> &nbsp
     <br>
-    <!-- [ <a
+    [ <a
             href="https://rdcu.be/cKKFX" target="_blank">Paper</a> &nbsp|&nbsp
-    <a href="https://github.com/tajwarabraraleef/TTMB-biopsy-core-registration" target="_blank">Code</a> ] -->
+    <a href="https://github.com/tajwarabraraleef/TTMB-biopsy-core-registration" target="_blank">Code</a> ]
     </div></div>
     <p></p>
     <div style="text-align: left">
@@ -192,7 +191,7 @@
             <td style="padding:20px;vertical-align:middle">
               <div class="paper_title">
               <div class="paper_title_center">
-                <papertitle>Quasi-Real Time Multi-Frequency 3D Shear Wave Absolute Vibro-Elastography (S-WAVE) System for Prostate</papertitle>
+                <papertitle>Time Multi-Frequency 3D Shear Wave Absolute Vibro-Elastography (S-WAVE) System for the Prostate</papertitle>
               <br>
                 <strong>Tajwar Abrar Aleef</strong>,
                 Julio Lobo,
@@ -206,7 +205,7 @@
               <a href="https://scholar.google.com/citations?user=kpp_A9wAAAAJ&hl=en&oi=ao/"  target="_blank">Septimiu E. Salcudean</a>
               <br>
 
-              <em>Submitted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=42" target="_blank">IEEE TMI</a>, 2022</em> &nbsp
+              <em>Under revision <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=42" target="_blank">IEEE TMI</a>, 2022</em> &nbsp
               <br>
               [ <a href="https://arxiv.org/abs/2205.04038" target="_blank">arXiv</a> ]
               </div></div>
@@ -254,7 +253,7 @@
               <a href="https://scholar.google.com/citations?user=kpp_A9wAAAAJ&hl=en&oi=ao/"  target="_blank">Septimiu E. Salcudean</a>
               <br>
 
-              <a href="https://sites.google.com/view/ipcai2022/home/" target="_blank"><em>IPCAI</em></a>, 2022 <font color="red"><strong> (Oral Presentation to be held in Tokyo)</strong></font> &nbsp
+              <a href="https://sites.google.com/view/ipcai2022/home/" target="_blank"><em>IPCAI</em></a>, 2022 <font color="red"><strong> (Oral Presentation; Young Investigator Travel Award)</strong></font> &nbsp
               <br>
               [ <a
                       href="https://rdcu.be/cKKFX" target="_blank">Paper</a> &nbsp|&nbsp
