ius paper link correction

--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
     <em><a href=https://2022.ieee-ius.org/" target="_blank">IEEE IUS</a></em>, 2022 <font color="red"><strong> (Oral Presentation; Travel Award)</strong></font> &nbsp
     <br>
     [ <a
-            href="https://rdcu.be/cKKFX" target="_blank">Paper</a> &nbsp|&nbsp
-    <a href="https://github.com/tajwarabraraleef/TTMB-biopsy-core-registration" target="_blank">Code</a> ]
+            href="https://ieeexplore.ieee.org/abstract/document/9958838" target="_blank">Paper</a> &nbsp]
     </div></div>
     <p></p>
     <div style="text-align: left">
