transparency of ece logo and sbme logo

--- a/index.html
+++ b/index.html
@@ -1366,7 +1366,7 @@ TEACHING EXPERIENCE -->
           <tr>
             <td style="padding:20px;vertical-align:middle">
                 <div class="teaching_exp">
-              <img src="images/ECE_closed_full_colour-high-res_0.jpg" style="border-radius:5%"></div></td>
+              <img src="images/ECE_closed_full_colour-high-res_0.png" style="border-radius:5%"></div></td>
 
             <td style="padding:20px;vertical-align:middle">
               <div class="paper_title">
