fix hori line teaching exp

--- a/index.html
+++ b/index.html
@@ -1441,18 +1441,22 @@ TEACHING EXPERIENCE -->
             <td style="padding:20px;vertical-align:middle">
               <div class="heading_center">
               <heading>Teaching Experience</heading>
+              <hr>
               </div>
             </td>
           </tr>
+
         </tbody></table>
 
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-top:-10px;margin-right:auto;margin-left:auto;"><tbody>
+
+
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-top:-10px;margin-left:auto;"><tbody>
+
           <tr>
-            <hr>
             <td style="padding:20px;vertical-align:middle">
                 <div class="teaching_exp">
               <img src="images/ECE_closed_full_colour-high-res_0.png" style="border-radius:5%"></div></td>
-
             <td style="padding:20px;vertical-align:middle">
               <div class="paper_title">
               <div class="paper_title_center">
